the other slide responsivating is done

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Next company (brand), the creator and the official seller of various shoes" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://shopping-app-luch-chan.vercel.app" />
+  <meta property="og:site_name" content="Lucy chan's shopping app" />
+  <meta property="og:locale" content="en_UK" />
+  <meta property="og:title" content="Next shoes - the various type of shoes creator and seller" />
+  <meta name="description" content="Next company (brand), the creator and the official seller of various shoes" />
+  <meta property="og:description"
+    content="Next company (brand), the creator and the official seller of various shoes" />
+  <meta property="og:image" content="./fav-ico.png" />
+  <meta property="og:image:type" content="image/png" />
+  <meta name="keywords"
+    content="shop, shopping, shoe, shoes, next shop, next shopping, next shoes, lucy chan, chan, lucy, lucy chan vercel, lucy chan shopping app" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
