--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
+  <meta name="theme-color" media="(prefers-color-scheme: light)" content="#fff">
+  <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#000">
   <meta name="description" content="Next company (brand), the creator and the official seller of various shoes" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://shopping-app-luch-chan.vercel.app" />
@@ -23,6 +24,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
     rel="stylesheet">
+  <link rel="manifest" href="./manifest.json">
   <title>Next shoes</title>
   <link rel="icon" href="./fav-ico.png">
   <noscript>You need to enable JavaScript to run this app.</noscript>
